--- a/Prophet.ipynb
+++ b/Prophet.ipynb
@@ -13853,7 +13853,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Viz with ChatGPT"
+        "# Data Viz"
       ],
       "metadata": {
         "id": "JQL8zI31lI-A"
