--- a/Prophet.ipynb
+++ b/Prophet.ipynb
@@ -5475,6 +5475,24 @@
         "id": "0BVxHTmgh15I",
         "outputId": "ea31daf8-8280-4243-9281-acde7ba45328"
       },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:prophet:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n",
+            "DEBUG:cmdstanpy:input tempfile: /tmp/tmpkhx7gaoe/c7gook5_.json\n",
+            "DEBUG:cmdstanpy:input tempfile: /tmp/tmpkhx7gaoe/migj7f_h.json\n",
+            "DEBUG:cmdstanpy:idx 0\n",
+            "DEBUG:cmdstanpy:running CmdStan, num_threads: None\n",
+            "DEBUG:cmdstanpy:CmdStan args: ['/usr/local/lib/python3.11/dist-packages/prophet/stan_model/prophet_model.bin', 'random', 'seed=68566', 'data', 'file=/tmp/tmpkhx7gaoe/c7gook5_.json', 'init=/tmp/tmpkhx7gaoe/migj7f_h.json', 'output', 'file=/tmp/tmpkhx7gaoe/prophet_modelfvhf_ntj/prophet_model-20250117135613.csv', 'method=optimize', 'algorithm=lbfgs', 'iter=10000']\n",
+            "13:56:13 - cmdstanpy - INFO - Chain [1] start processing\n",
+            "INFO:cmdstanpy:Chain [1] start processing\n",
+            "13:56:13 - cmdstanpy - INFO - Chain [1] done processing\n",
+            "INFO:cmdstanpy:Chain [1] done processing\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
